# snake_sfml_game

./: CMakeLists.txt  README.md  build_and_run.sh  main.cc  snake.cpp
include/: snake.hpp
